tests/e2e/keywords/finally_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    finally = 1
      ^^^^^^^

E0020: `finally` is a reserved keyword
